2011-01-09  John W. Eaton  <jwe@octave.org>

	* token.h, token.cc (token::plot_tok_typ): Delete unused enum.
	(token::token_type): Delete pttype_token from the list.
	(token::token (plot_tok_type, int, int)): Delete unused constructor.
	(token::pttype): Delete unused function.
	(token::anonymous union): Delete PT element.

2011-01-09  John W. Eaton  <jwe@octave.org>

	* lex.ll (display_token): Display token value for NUM, IMAG_NUM,
	STRUCT_ELT, NAME, DQ_STRING, and SQ_STRING tokens.

2011-01-09  John W. Eaton  <jwe@octave.org>

	* lex.h, lex.ll, oct-parse.yy (lexer_flags::parsed_function_name):
	Declare to be std::stack<bool> instead of bool.  Change all uses.
	Bug #32083.

2011-01-08  Konstantinos Poulios  <logari81@googlemail.com>

	* gl-render.cc (opengl_renderer::draw_axes): Revert positionmode
	to auto after automatic positioning of titles. Bug #32074.

2011-01-08  David Grundberg  <individ@acc.umu.se>

	* ov-fcn.h (is_subfunction): Rename from is_nested_function.
	Change all uses and nearby comments.
	* ov-usr-fcn.h (is_subfunction, mark_as_subfunction): Rename from
	is_nested_function, mark_as_nested_function.  Change all uses.

2011-01-07  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): For uniformoutput case
	with nargout > 0, initialize elements of retval to NDArray
	objects of the same size as the input.  Bug #32067.

2011-01-07  John W. Eaton  <jwe@octave.org>

	* graphics.cc (Fget): Return empty matrix if no values are found.
	Bug #32067.

2011-01-06  Konstantinos Poulios  <logari81@googlemail.com>

	* txt-eng-ft.h, txt-eng-ft.cc: Remove dependency on graphics.h.
	(ft_render::set_font): New arguments list.
	(ft_render::text_to_pixels): New method.
	* graphics.cc (text::properties::update_text_extent): Adapt the call
	to ft_render::set_font.
	(text::properties::get_extent_matrix): New function.
	(text::properties::update_text_extent): Function rewrite.
	* gl-render.cc (opengl_renderer::set_font): Likewise.